tests/NormalTests/paczka1/fuzzy1/41139425.err
Error in line 6: HZCp A871 37,0
Error in line 12: HZCp S461 36,6
Error in line 21: SD96 SD96 292,4
Error in line 25: g99xf0oDtrW S260 29,4
Error in line 31: KtQ S461 48,6
Error in line 22: Hlj0 S461 305,0
